--- a/python-client/ui.glade
+++ b/python-client/ui.glade
@@ -21,7 +21,7 @@
     <child>
       <object class="GtkEntry" id="uname_entry">
         <property name="visible">True</property>
-        <property name="can_focus">False</property>
+        <property name="can_focus">True</property>
         <property name="invisible_char">•</property>
         <property name="primary_icon_stock">gtk-orientation-portrait</property>
       </object>
@@ -46,7 +46,7 @@
     <child>
       <object class="GtkEntry" id="ip_entry">
         <property name="visible">True</property>
-        <property name="can_focus">False</property>
+        <property name="can_focus">True</property>
         <property name="invisible_char">•</property>
         <property name="primary_icon_stock">gtk-network</property>
       </object>
@@ -60,6 +60,8 @@
   <object class="GtkWindow" id="main_window">
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">Yet Another TISCaP Client</property>
+    <property name="window_position">center</property>
+    <property name="default_width">500</property>
     <child>
       <object class="GtkBox" id="box1">
         <property name="visible">True</property>
