--- a/python-client/ui.glade
+++ b/python-client/ui.glade
@@ -57,17 +57,6 @@
       </packing>
     </child>
   </object>
-  <object class="GtkListStore" id="user_store">
-    <columns>
-      <!-- column-name user_name -->
-      <column type="gchararray"/>
-    </columns>
-    <data>
-      <row>
-        <col id="0">JimBob</col>
-      </row>
-    </data>
-  </object>
   <object class="GtkWindow" id="main_window">
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">Yet Another TISCaP Client</property>
@@ -112,6 +101,7 @@
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="editable">False</property>
+                <property name="wrap_mode">word</property>
               </object>
               <packing>
                 <property name="expand">True</property>
@@ -203,5 +193,11 @@
         </child>
       </object>
     </child>
+  </object>
+  <object class="GtkListStore" id="user_store">
+    <columns>
+      <!-- column-name user_name -->
+      <column type="gchararray"/>
+    </columns>
   </object>
 </interface>
