--- a/python-client/ui.glade
+++ b/python-client/ui.glade
@@ -66,7 +66,7 @@
       <packing>
         <property name="expand">True</property>
         <property name="fill">True</property>
-        <property name="position">1</property>
+        <property name="position">0</property>
       </packing>
     </child>
     <child>
@@ -106,7 +106,7 @@
         <property name="expand">False</property>
         <property name="fill">True</property>
         <property name="padding">3</property>
-        <property name="position">2</property>
+        <property name="position">1</property>
       </packing>
     </child>
   </object>
@@ -188,9 +188,12 @@
         <property name="width_request">250</property>
         <property name="visible">True</property>
         <property name="can_focus">True</property>
+        <property name="max_length">16</property>
         <property name="invisible_char">•</property>
+        <property name="activates_default">True</property>
         <property name="invisible_char_set">True</property>
         <property name="primary_icon_stock">gtk-orientation-portrait</property>
+        <property name="input_purpose">alpha</property>
       </object>
       <packing>
         <property name="expand">False</property>
