--- a/python-client/ui.glade
+++ b/python-client/ui.glade
@@ -79,6 +79,7 @@
             <property name="width_request">65</property>
             <property name="height_request">35</property>
             <property name="visible">True</property>
+            <property name="sensitive">False</property>
             <property name="can_focus">False</property>
             <property name="receives_default">True</property>
           </object>
